# Smart-KYC

./: .gitignore  LICENSE  README.md  docker_compose.yml  pyproject.toml
backend/app/: main.py
backend/app/ai/: registry.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: case.py  evidence.py
backend/app/schemas/: case.py  evidence.py  policy.py
backend/app/services/: customer_profile_service.py  evidence_service.py  policy_service.py
backend/app/utils/: ids.py
backend/app/workflows/: celery_app.py  tasks.py
citi-kyc-backend/: celery_broker.sqlite  celery_results.sqlite
citi-kyc-backend/app/: main.py
citi-kyc-backend/app/ai/: registry.py
citi-kyc-backend/app/core/: config.py
citi-kyc-backend/app/db/: session.py
citi-kyc-backend/app/interfaces/: human_review_adaptor.py  notification_service.py  policy_repository.py
citi-kyc-backend/app/models/: audit.py  case.py  case_input.py  discrepancy.py  evidence.py  idempotency.py  review_task.py  state_transitions.py
citi-kyc-backend/app/schemas/: discrepancy.py  policy.py
citi-kyc-backend/app/services/: audit_logger.py  case_service.py  customer_profile_service.py  discrepancy_service.py  doc_classifier.py  evidence_service.py  human_review_adaptor_db.py  human_review_service.py  idempotency_service.py  ocr_service.py  (+3 more)
citi-kyc-ui/: app.py  main_backup.py
citi-kyc-ui/api/: cases.py  client.py  evidence.py  policies.py
citi-kyc-ui/core/: config.py  session.py  ui_components.py
citi-kyc-ui/pages/: case_tracker.py  home.py  initiate_case.py  upload_evidence.py
(+33 files in other folders)
