[project]
name = "smart-kyc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.2",
    "dataclasses>=0.8",
    "datetime>=6.0",
    "fastapi>=0.128.0",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.53.0",
    "typing>=3.10.0.0",
    "uuid>=1.30",
]
